<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Story App</string>
    <string name="welcome_message">Welcome to Aplikasi Story</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="hint_name">Name</string>
    <string name="story_title">Story Title</string>
    <string name="story_date">Story Date</string>
    <string name="image">Image</string>
    <string name="detail_photo">Detailed photos of the story</string>
    <string name="description">Description</string>
    <string name="add_image">Add Image</string>
    <string name="show_more" tools:ignore="UnusedResources">Show more</string>
    <string name="ic_logo">logo</string>
    <string name="photo" tools:ignore="UnusedResources">image</string>
    <string name="loading">loading</string>
    <string name="story_app">Story App</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="language">Select a language</string>
    <string name="add_story">Add Story</string>
    <string name="camera_button">Camera</string>
    <string name="gallery_button">Gallery</string>
    <string name="back_button_description">Back</string>
    <string name="message_welcome_page">Exciting, inspiring and meaningful stories at your fingertips.</string>
    <string name="add_widget" tools:ignore="UnusedResources">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="item_widget">Item widget</string>
    <string name="empty_text">NO DATA</string>
    <string name="email_invalid_error">Invalid email address</string>
    <string name="password_length_error">Password must be at least 8 characters</string>
    <string name="title_activity_maps">Maps</string>
    <string name="retry">Retry</string>
    <string name="add_location">Current location</string>


    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>

</resources>