<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.WelcomeActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_message"
        android:textSize="24sp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp" />

    <Button
        android:id="@+id/btn_go_to_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/btn_go_to_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_button"
        android:layout_below="@id/btn_go_to_login" />

</RelativeLayout>