<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.RegisterActivity">

    <EditText
        android:id="@+id/ed_register_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name"
        android:layout_marginBottom="16dp"
        android:padding="12dp"
        android:background="@drawable/edit_text_background" />

    <EditText
        android:id="@+id/ed_register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:layout_below="@id/ed_register_name"
        android:layout_marginBottom="16dp"
        android:padding="12dp"
        android:background="@drawable/edit_text_background" />

    <EditText
        android:id="@+id/ed_register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:layout_below="@id/ed_register_email"
        android:layout_marginBottom="16dp"
        android:padding="12dp"
        android:background="@drawable/edit_text_background" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_button"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:layout_below="@id/ed_register_password" />

    <include
        android:id="@+id/loading_layout"
        layout="@layout/loading_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

</RelativeLayout>